--- a/index.html
+++ b/index.html
@@ -9,7 +9,16 @@
     <title>Tributo-Michael-Jacskon</title>
 </head>
 <body>
-    <header> </header>
+    <header class="container"> 
+        <div class="cabecalho"> <h1>Michael Joseph Jackson</h1> 
+        <p>cantor, compositor e dançarino estadunidense.</p>
+       </div>
+    </div>
+    </header>
+    <main>
+    <div class="barra">
+        <div></div>
+    </main>
     
 </body>
 </html>
