--- a/index.html
+++ b/index.html
@@ -10,8 +10,10 @@
 </head>
 <body>
     <header> 
-        <div class="cabecalho"> <h1>Michael Joseph Jackson</h1> 
+        <img src="assets/imagens/michael.gif" alt="" class="michel-gif">
+        <div class="cabecalho"><h1>Michael Joseph Jackson</h1> 
         <p>cantor, compositor e dançarino estadunidense.</p>
+        <img src="assets/imagens/michael.gif" alt="" class="michel-2">
         </div>
     </header>
     <main>
@@ -117,7 +119,7 @@
         </article>
     </main>
     <footer>
-        <p> &#169; Autor: <a href="#">Marcelo Nunes da silva</a>
+        <p> &#169; Autor: <a href="https://github.com/MarceloNunes2">Marcelo Nunes da silva</a>
             Tribubo Tributo-Michael-Jacskon 
         </p>
     </footer>
