--- a/index.html
+++ b/index.html
@@ -27,6 +27,9 @@
             <figure><img src="assets/imagens/Michael_Jackson_in_1988.jpg" alt="Michael_Jackson_in_1988">
             <figcaption>
                 <q>Você nunca sabe quanto tempo você tem com alguém, então não esqueça de dizer eu te amo enquanto você pode.</q>
+                <figcaption>
+                    <strong>1958 - 2009</strong>
+                </figcaption>
             </figcaption>
             </figure>
         
